--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 	},
 	"dependencies": {
 		"prop-types": "^15.7.2",
+		"prototypes": "^3.0.3",
 		"query-string": "^7.0.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
